# bwi_common

./: .editorconfig  .gitignore  .gitmodules  .travis.rosinstall  .travis.yml  LICENSE  README.md  reset_env.py
actasp/: CMakeLists.txt  package.xml  setup.py
actasp/src/: AnswerSet.cpp  CMakeLists.txt  GraphPolicy.cpp
actasp/test/: asptypes.cpp  main.cpp  reasoner.cpp  solver.cpp
actasp_ros/: CMakeLists.txt  README.md  package.xml  setup.py
actasp_ros/action/: ExecuteSmachStateMachine.action
actasp_ros/msg/: AnswerSet.msg  AspFluent.msg  AspFunction.msg
bwi_cmass/: .gitignore  CMakeLists.txt  IPUpdater.py  crontab.entry  package.xml  readme.md
bwi_cmass/launch/: cmass_client.launch
bwi_cmass/server/: .cmasskey  makefile  server.go
bwi_cmass/src/: client.cpp
bwi_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_gazebo_entities/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_gazebo_entities/entities/: ball.urdf.xacro
bwi_gazebo_entities/gazebo/: automated_person.gazebo.xacro  controllable_person.gazebo.xacro
bwi_gazebo_entities/launch/: ball.launch  controllable_person.launch  gazebo_camera.launch  random_persons.launch
bwi_gazebo_entities/persons/: automated_person.urdf.xacro  controllable_person.urdf.xacro
bwi_gazebo_entities/test/: person.test.xacro  test.sh
bwi_gazebo_entities/urdf/: ball.urdf.xacro  camera.urdf  common.urdf.xacro  person.gazebo.xacro  person.urdf.xacro
bwi_interruptable_action_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_interruptable_action_server/launch/: fibonacci.launch
bwi_interruptable_action_server/src/: fibonacci.cpp
bwi_joystick_teleop/: CHANGELOG.rst  CMakeLists.txt  README  package.xml
bwi_joystick_teleop/launch/: joystick_teleop.launch
bwi_joystick_teleop/src/: joystick_teleop_node.cpp
bwi_knowledge_representation/: CMakeLists.txt  package.xml  setup.py
bwi_knowledge_representation/env-hooks/: bwi_knowledge_representation.sh
bwi_knowledge_representation/scripts/: populate_with_map
bwi_kr_execution/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
bwi_kr_execution/action/: ExecutePlan.action
bwi_kr_execution/domain/: .gitignore  action_rules.asp  all_actions.asp  base_rules.asp  costs.txt  elevators.asp  elevators_facts.asp  experiment.asp  hri.asp  hri_facts.asp  meeting_experiment.asp  navigation.asp  navigation_facts.asp  query.txt  query2.txt
bwi_kr_execution/domain_dialog/: all_actions.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/domain_indigo/: all_actions.asp  costlua.txt
bwi_kr_execution/domain_kinetic/: .gitignore  action_rules.asp  all_actions.asp  elevators.asp  hri.asp  hri_facts.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/domain_simulation/: .gitignore  all_actions.asp  costs.asp  elevators.asp  elevators_facts.asp  experiment.asp  goal.asp.bak  hri.asp  hri_facts.asp  meeting_experiment.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/domain_simulation_kinetic/: all_actions.asp  elevators.asp  hri.asp  hri_facts.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/launch/: bwi_kr_execution.launch  bwi_kr_execution_for_dialog.launch  bwi_kr_execution_simulation.launch  bwi_turtlebot.launch  robot.launch
bwi_kr_execution/msg/: AnswerSet.msg  AspRule.msg
bwi_kr_execution/src/: BwiResourceManager.h  CMakeLists.txt  RemoteReasoner.cpp  RemoteReasoner.h  StaticFacts.cpp  StaticFacts.h  any_plan_executor.cpp  asp_formatter.cpp  kb_to_asp.cpp  knowledge_reasoning.cpp  learning_executor.cpp  msgs_utils.cpp  msgs_utils.h  observers.h  plan_executor_node.cpp  single_plan_executor.cpp  state_tracker.cpp  test_action_executor_node.cpp  test_plan_executor_node.cpp  utils.h
bwi_kr_execution/srv/: ComputeAllPlans.srv  ComputePlan.srv  UpdateFluents.srv
bwi_kr_execution/values_simulation/: :-not at(l3_404,0)--  :-not at(l3_414b,0)--
bwi_led/: CMakeLists.txt  README.md  package.xml
bwi_led/action/: LED.action
bwi_led/arduino/: README.md
bwi_led/launch/: bwi_led.launch
bwi_led/ledcomm/: ledcom.h  rgbhsv.h
bwi_led/msg/: led_animations.msg
bwi_led/scripts/: udev_install.sh
bwi_led/src/: led_control_server.cpp  test.cpp
bwi_led/udev/: 99-metromini.rules  README.md
bwi_logging/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
bwi_logging/launch/: record.launch
bwi_logging/nodes/: record
bwi_logging/scripts/: clone_server  distance_traveled  upload
bwi_logging/src/: frame_recording.cpp  get_distance.py
bwi_logging/tests/: CMakeLists.txt  test_directory.py
bwi_logical_translator/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_logical_translator/scripts/: execute_logical_goal
bwi_manipulation/: CMakeLists.txt  package.xml
bwi_manipulation/src/: ArmPositionDB.cpp  GraspCartesianCommand.cpp  grasp_utils.cpp
bwi_mapper/: CHANGELOG.rst  CMakeLists.txt  graph.yaml  package.xml
bwi_mapper/maps/: alt_bwi_test_world.pgm  alt_bwi_test_world.yaml  bwi_test_world.pgm  bwi_test_world.yaml  freehand-2.pgm  freehand-2.yaml  freehand.pgm  freehand.yaml  graph.pgm  graph.yaml  graph2.pgm  graph2.yaml  intel.pgm  intel.yaml  small_bwi_test_world.pgm  small_bwi_test_world.yaml  voronoi.pgm  voronoi.yaml
bwi_mapper/paper_images/: heuristic1.yaml  heuristic2.yaml  human_model1.yaml  human_model2.yaml  human_model_iros.yaml
bwi_mapper/scripts/: translate_graph
bwi_mapper/test/: test_circle.cpp  test_dfs.cpp  test_graph.cpp  test_map_loader.cpp  test_voronoi.cpp
bwi_moveit_utils/: CMakeLists.txt  Readme.md  package.xml
bwi_moveit_utils/action/: FollowVelocityTrajectory.action
bwi_moveit_utils/launch/: moveit_utils.launch
bwi_moveit_utils/positions/: drop.bag  drop_2.bag  drop_right.bag  drop_sub.bag  grab.bag  grab_right.bag  grab_right_sub.bag  hide.bag  lift_base.bag  poke.bag  press.bag  press_right.bag  press_sub.bag  push.bag  push_right.bag  sub_grab.bag
bwi_moveit_utils/src/: angular_vel_control_srv.cpp  mico_nav_safety_service.cpp  (+11 more)
bwi_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_perception/: CMakeLists.txt  package.xml  readme.md  rviz_feature.rviz
(+1091 files in other folders)
