<package>
  <name>bwi_common</name>
  <version>0.3.7</version>
  <description>
    Common packages and data for the Building-Wide Intelligence
    project of the University of Texas at Austin.
  </description> 
  <license>BSD</license>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bwi_gazebo_entities</run_depend>
  <run_depend>bwi_interruptable_action_server</run_depend>
  <run_depend>bwi_kr_execution</run_depend>
  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_msgs</run_depend>
  <run_depend>bwi_planning_common</run_depend>
  <run_depend>bwi_tasks</run_depend>
  <run_depend>bwi_tools</run_depend>
  <run_depend>stop_base</run_depend>
  <run_depend>utexas_gdc</run_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
