<package format="2">
  <name>bwi_common</name>
  <version>0.3.12</version>
  <description>
    Common packages and data for the Building-Wide Intelligence
    project of the University of Texas at Austin.
  </description> 
  <license>BSD</license>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bwi_gazebo_entities</exec_depend>
  <exec_depend>bwi_interruptable_action_server</exec_depend>
  <exec_depend>bwi_joystick_teleop</exec_depend>
  <exec_depend>bwi_kr_execution</exec_depend>
  <exec_depend>bwi_logging</exec_depend>
  <exec_depend>bwi_logical_translator</exec_depend>
  <!-- comment out to avoid compiling agile_grasp
  <exec_depend>bwi_manipulation</exec_depend>
  -->
  <exec_depend>bwi_mapper</exec_depend>
  <exec_depend>bwi_moveit_utils</exec_depend>
  <exec_depend>bwi_msgs</exec_depend>
  <exec_depend>bwi_perception</exec_depend>
  <exec_depend>bwi_planning_common</exec_depend>
  <exec_depend>bwi_rqt_plugins</exec_depend>
  <exec_depend>bwi_scavenger</exec_depend>
  <exec_depend>bwi_services</exec_depend>
  <exec_depend>bwi_tasks</exec_depend>
  <exec_depend>bwi_tools</exec_depend>
  <exec_depend>bwi_virtour</exec_depend>
  <exec_depend>multi_level_map_msgs</exec_depend>
  <exec_depend>multi_level_map_server</exec_depend>
  <exec_depend>multi_level_map_utils</exec_depend>
  <exec_depend>stop_base</exec_depend>
  <exec_depend>utexas_gdc</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
