<package format="2">
  <name>bwi_common</name>
  <version>0.3.12</version>
  <description>
    Common packages and data for the Building-Wide Intelligence
    project of the University of Texas at Austin.
  </description> 
  <license>BSD</license>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bwi_gazebo_entities</exec_depend>
  <exec_depend>bwi_interruptable_action_server</exec_depend>
  <exec_depend>bwi_logical_translator</exec_depend>
  <exec_depend>bwi_mapper</exec_depend>
  <exec_depend>bwi_msgs</exec_depend>
  <exec_depend>bwi_planning_common</exec_depend>
  <exec_depend>bwi_tools</exec_depend>
  <exec_depend>multi_level_map_msgs</exec_depend>
  <exec_depend>multi_level_map_server</exec_depend>
  <exec_depend>multi_level_map_utils</exec_depend>
  <exec_depend>train_world</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
