<package>
  <name>bwi_gazebo_entities</name>
  <version>0.2.3</version>
  <description>
    Simulation objects and avatars used in experimentsbwi_gazebo_entities
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo_entities</url>
  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>

  <!-- testing dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
