<package format="2">
  <name>bwi_gazebo_entities</name>
  <version>0.3.5</version>
  <description>
    Simulation objects and avatars used in experiments.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo_entities</url>
  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>bwi_mapper</depend>
  <depend>bwi_msgs</depend>
  <depend>bwi_tools</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
