<?xml version="1.0"?>
<package>
  <name>bwi_interruptable_action_server</name>
  <version>0.3.7</version>
  <description>
    This wraps the move_base node from the standard ROS navigation
    stack. The purpose of the interruptable navigator is to allow
    seamless multi-robot interactions by temporarily interrupting
    robots and diverting them when two robots are about to collide.
  </description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_tutorials</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_tutorials</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
