<?xml version="1.0"?>
<package format="2">
  <name>bwi_joystick_teleop</name>
  <version>0.3.12</version>
  <description>
    Allows robots to be controlled with joysticks through the use of the joy library.
  </description>
  <maintainer email="musigonzales@gmail.com">Alex Gonzales</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author email="musigonzales@gmail.com">Alex Gonzales</author>
  <license>BSD</license>
  
  <url type="website">http://wiki.ros.org/bwi_joystick_teleop</url>
  <url type="repository">https://github.com/utexas-bwi/bwi_common.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
