<?xml version="1.0"?>
<package format="2">
  <name>bwi_kr_execution</name>
  <version>0.3.12</version>
  <description>
    Execution nodes for using the BWI Knowledge Representation.
  </description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Matteo Leonetti</author>
  <author>Piyush Khandelwal</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_kr_execution</url>
  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>bwi_services</depend> 
  <depend>bwi_msgs</depend> 
  <depend>gringo</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>plan_execution</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
