<?xml version="1.0"?>
<package format="2">
  <name>bwi_led</name>
  <version>0.3.8</version>
  <description>
    LED package that provides drivers for communicating with Polulu WS2812B-Based LED Strips
    utilizing an Arduino microcontroller. Also action and service calls for standard applications.
  </description>

  <author email="plankenau@gmail.com">Pato Lankenau</author>
  <author email="rolando.fernandez.jr@gmail.com">Rolando Fernandez</author>.
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>


</package>